bare dashboard view renders from app

--- a/public/css/layout.less
+++ b/public/css/layout.less
@@ -1,1 +1,10 @@
-#shopkeeper_app { width: 960px; margin: auto; }
+#storekeeper_app { width: 960px; margin: 20px auto; background: @white;
+  .border_radius;
+  .box_shadow;
+}
+
+#main_header { background: #222; height: 50px;
+  .border_radius(4px 4px 0 0);
+}
+
+#main_content { padding: 20px; }
