--- a/public/css/helpers.less
+++ b/public/css/helpers.less
@@ -10,7 +10,9 @@
 @darkgrey: #444;
 
 // fonts
-.primary_font () { font-family: Arial, Helvetica, sans-serif; }
+.primary_font () { 
+  font-family: Arial, Helvetica, sans-serif; 
+}
 
 @huge:    32px;
 @large:   24px;
@@ -22,8 +24,14 @@
 
 .text_shadow(@color: @white) { text-shadow: 0 1px 1px @color; }
 
-.border-radius (@radius: 4px) {
+.border_radius (@radius: 4px) {
   -webkit-border-radius: @radius;
      -moz-border-radius: @radius;
           border-radius: @radius;
+}
+
+.box_shadow (@shadow: 0 1px 3px rgba(0, 0, 0, 0.3)) {
+  -webkit-box-shadow: @shadow;
+     -moz-box-shadow: @shadow;
+          box-shadow: @shadow;
 }
