--- a/public/css/base.less
+++ b/public/css/base.less
@@ -1,1 +1,1 @@
-html, body { background: @lightgrey; color: @darkgrey; .primary_font; .font_size(@normal); }
+html, body { background: @lightgrey url(/img/bg.png); color: @darkgrey; .primary_font; .font_size(@normal); }
