added orders view and linking to it

--- a/public/css/base.less
+++ b/public/css/base.less
@@ -1,1 +1,3 @@
 html, body { background: @lightgrey url(/img/bg.png); color: @darkgrey; .primary_font; .font_size(@normal); }
+
+a { color: @link; }
