--- a/public/css/layout.less
+++ b/public/css/layout.less
@@ -5,9 +5,14 @@
 
 #main_header { position: relative; height: 30px; padding: 15px; .border_radius(4px 4px 0 0); .linear_gradient(#545454, #3d3d3d);
   #store_logo { background: url(/img/sklogo.png); width: 44px; height: 44px; margin-top: -5px; }
-  #main_nav { position: absolute; top: 18px; left: 65px; color: @white; .font_size(@small); .text_shadow(0 1px 1px @black);
-    ul > li { float: left; margin: 0 10px; padding: 5px 14px; .border_radius(12px); }
-    ul > li.current { background: rgba(255, 255, 255, 0.2); .box_shadow(inset 0 1px 1px @black); }
+  #main_nav { position: absolute; top: 22px; left: 65px; .font_size(@small); .text_shadow(0 1px 1px @black);
+    ul > li { float: left; margin: 0 10px;
+      a { padding: 5px 14px; .border_radius(12px); color: darken(@white, 40%); text-decoration: none; 
+        -webkit-transition: all 0.2s ease-in;
+      }
+      &:hover a { color: @white; background: rgba(0, 0, 0, 0.1); .box_shadow(inset 0 1px 1px rgba(0, 0, 0, 0.5)); }
+      &.current a { color: @white; background: rgba(0, 0, 0, 0.3); .box_shadow(inset 0 1px 5px @black); }
+    }
   }
   #search { position: absolute; top: 18px; right: 18px; color: @black; background: #333; .border_radius(14px); border: 0; border-top: 1px solid transparent; border-bottom: 1px solid rgba(255, 255, 255, 0.3); height: 20px; padding: 2px 10px; width: 130px; .box_shadow(inset 0 1px 2px rgba(0, 0, 0, 0.5)); .font_size(@tiny); line-height: @tiny;
     -webkit-transition: all 0.2s ease-in;
