--- a/public/css/modules.less
+++ b/public/css/modules.less
@@ -1,3 +1,13 @@
 .modal_loader { margin: auto; width: 300px; margin-top: 180px; .font_size(@large); 
   .text_shadow(@white);
 }
+
+#orders > .list_filter {
+  margin-bottom: 40px;
+  a { color: #222; text-decoration: none; text-transform: uppercase; font-size: 14px; }
+}
+
+.order_list { width: 100%; 
+  td, th { padding: 10px 0; }
+  thead { color: #aaa; text-align: left; border-bottom: 2px solid #eee; }
+}
