--- a/public/js/app/views/templates/order_list_item/layout.handlebars
+++ b/public/js/app/views/templates/order_list_item/layout.handlebars
@@ -1,5 +1,3 @@
-<tr class="order_list_item" id="order_list_item_{{id}}">
-  <td>{{number}}</td>
-  <td>{{amount}}</td>
-  <td>{{status}}</td>
-</tr>
+<td>{{number}}</td>
+<td>{{totalAmount}}</td>
+<td>{{status}}</td>
