--- a/public/css/layout.less
+++ b/public/css/layout.less
@@ -4,8 +4,8 @@
 }
 
 #main_header { position: relative; height: 30px; padding: 15px; .border_radius(4px 4px 0 0); .linear_gradient(#545454, #3d3d3d);
-  #store_logo { color: @white; .font_size(@large); .text_shadow(0 -1px 1px @darkgrey); }
-  #main_nav { position: absolute; top: 18px; left: 160px; color: @white; .font_size(@small); .text_shadow(0 1px 1px @black);
+  #store_logo { background: url(/img/sklogo.png); width: 44px; height: 44px; margin-top: -5px; }
+  #main_nav { position: absolute; top: 18px; left: 65px; color: @white; .font_size(@small); .text_shadow(0 1px 1px @black);
     ul > li { float: left; margin: 0 10px; padding: 5px 14px; .border_radius(12px); }
     ul > li.current { background: rgba(255, 255, 255, 0.2); .box_shadow(inset 0 1px 1px @black); }
   }
