added simple order view

--- a/public/css/base.less
+++ b/public/css/base.less
@@ -1,3 +1,5 @@
 html, body { background: @lightgrey url(/img/bg.png); color: @darkgrey; .primary_font; .font_size(@normal); }
 
+h1 { .font_size(@large); margin-bottom: 20px; }
+
 a { color: @link; }
